Changed some consistency